update actuator moment usage

--- a/docs/source/tutorials/6_Inverse_Dynamics.ipynb
+++ b/docs/source/tutorials/6_Inverse_Dynamics.ipynb
@@ -313,7 +313,18 @@
         "        prmg = model.actuator_gainprm[idx_actuator,:9]\n",
         "        bias[idx_actuator] = mujoco.mju_muscleBias(length, lengthrange, acc0, prmb)\n",
         "        gain[idx_actuator] = min(-1, mujoco.mju_muscleGain(length, velocity, lengthrange, acc0, prmg))\n",
-        "    AM = data_copy.actuator_moment.T\n",
+        "    if mujoco.__version__ >= \"3.2.6\":\n",
+        "        AM = np.zeros((model.nu, model.nv))\n",
+        "        mujoco.mju_sparse2dense(\n",
+        "            AM,\n",
+        "            data.actuator_moment.reshape(-1),\n",
+        "            data.moment_rownnz,\n",
+        "            data.moment_rowadr,\n",
+        "            data.moment_colind.reshape(-1),\n",
+        "        )\n",
+        "    else:\n",
+        "        AM = data_copy.actuator_moment.copy()\n",
+        "    AM = AM.T\n",
         "    # ---- ctrl computation\n",
         "    P = 2 * AM.T @ AM\n",
         "    k = AM @ (gain * act) + AM @ bias - (qfrc / qfrc_scaler)\n",
