fix sb tutorials

--- a/docs/source/tutorials/2_Load_policy.ipynb
+++ b/docs/source/tutorials/2_Load_policy.ipynb
@@ -71,12 +71,12 @@
     "    env.unwrapped.weight_range=(0,0)\n",
     "    env.unwrapped.update_target()\n",
     "    for _ in range(40):\n",
-    "        frame = env.sim.renderer.render_offscreen(\n",
+    "        frame = env.unwrapped.sim.renderer.render_offscreen(\n",
     "                        width=400,\n",
     "                        height=400,\n",
     "                        camera_id=0)\n",
     "        frames.append(frame)\n",
-    "        o = env.get_obs()\n",
+    "        o = env.unwrapped.get_obs()\n",
     "        a = pi.get_action(o)[0]\n",
     "        next_o, r, done, *_, ifo = env.step(a) # take an action based on the current observation\n",
     "env.close()\n",
@@ -94,6 +94,13 @@
    "source": [
     "show_video('videos/exo_arm.mp4')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
