--- a/docs/source/tutorials/4c_Train_SB_policy.ipynb
+++ b/docs/source/tutorials/4c_Train_SB_policy.ipynb
@@ -20,11 +20,11 @@
    "source": [
     "from IPython.display import HTML\n",
     "from base64 import b64encode\n",
-    " \n",
+    "\n",
     "def show_video(video_path, video_width = 400):\n",
-    "   \n",
+    "\n",
     "  video_file = open(video_path, \"r+b\").read()\n",
-    " \n",
+    "\n",
     "  video_url = f\"data:video/mp4;base64,{b64encode(video_file).decode()}\"\n",
     "  return HTML(f\"\"\"<video autoplay width={video_width} controls><source src=\"{video_url}\"></video>\"\"\")\n"
    ]
@@ -61,7 +61,7 @@
     "model.learn(total_timesteps=1000)\n",
     "\n",
     "print(\"========================================\")\n",
-    "print(\"Job Finished.\") \n",
+    "print(\"Job Finished.\")\n",
     "print(\"========================================\")\n",
     "\n",
     "model.save('ElbowPose_policy')\n"
@@ -77,19 +77,23 @@
     "\n",
     "pi = PPO.load(policy)\n",
     "\n",
+    "# define a discrete sequence of positions to test\n",
     "AngleSequence = [60, 30, 30, 60, 80, 80, 60, 30, 80, 30, 80, 60]\n",
     "env.reset()\n",
     "frames = []\n",
     "for ep in range(len(AngleSequence)):\n",
     "    print(\"Ep {} of {} testing angle {}\".format(ep, len(AngleSequence), AngleSequence[ep]))\n",
-    "    env.env.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
-    "    env.env.target_type = 'fixed'\n",
-    "    env.env.weight_range=(0,0)\n",
-    "    env.env.update_target()\n",
+    "    env.unwrapped.target_jnt_value = [np.deg2rad(AngleSequence[int(ep)])]\n",
+    "    env.unwrapped.target_type = 'fixed'\n",
+    "    env.unwrapped.weight_range=(0,0)\n",
+    "    env.unwrapped.update_target()\n",
     "    for _ in range(40):\n",
-    "        frame = env.sim.renderer.render_offscreen(width=400, height=400)\n",
-    "        frames.append(frame[::-1,:,:])\n",
-    "        o = env.get_obs()\n",
+    "        frame = env.unwrapped.sim.renderer.render_offscreen(\n",
+    "                        width=400,\n",
+    "                        height=400,\n",
+    "                        camera_id=0)\n",
+    "        frames.append(frame)\n",
+    "        o = env.unwrapped.get_obs()\n",
     "        a = pi.predict(o)[0]\n",
     "        next_o, r, done, *_, ifo = env.step(a) # take an action based on the current observation\n",
     "env.close()\n",
@@ -98,6 +102,15 @@
     "# make a local copy\n",
     "skvideo.io.vwrite('videos/arm.mp4', np.asarray(frames),outputdict={\"-pix_fmt\": \"yuv420p\"})\n",
     "show_video('videos/arm.mp4')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "env.unwrapped.update_target"
    ]
   }
  ],
